@@ -1,4 +1,5 @@
 0.06
+ - Update Module::Install to 1.21 version.
  - Update copyright years.
 
 0.05 2022-06-06T18:09:27+02:00
